Submission/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  namespace: rik8s
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: riksgatewayservice.io
    http:
      paths:
      - pathType: Prefix
        path: /api/users
        backend:
          service:
            name: user-service
            port:
              number: 3000
      - pathType: Prefix
        path: /api/products
        backend:
          service:
            name: product-service
            port:
              number: 3001
      - pathType: Prefix
        path: /api/orders
        backend:
          service:
            name: order-service
            port:
              number: 3002
      - pathType: Prefix
        path: /
        backend:
          service:
            name: gateway-service
            port:
              number: 80
